# open-witness-library

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  api_points.txt  i18n.toml  index.html  package-lock.json  package.json  styles.css
.github/workflows/: ci.yml
i18n/en-US/: open_witness_library_ui.ftl
i18n/pt-BR/: open_witness_library_ui.ftl
public/: pub-styling.css
src/: app.rs  common.js  main.css  main.jsx  main.rs  routes.jsx  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  utils.rs
src-tauri/src/commands/: catalogue.rs  mod.rs  settings.rs  userdata.rs
src-tauri/src/handlers/: catalog.rs  mod.rs  www.rs
src-tauri/src/jwpub/: extension.rs  manager.rs  mod.rs
src-tauri/src/publib/: catalog.rs  manager_old.rs  manifest.rs  mod.rs  publication.rs  tables.rs
src-tauri/src/publication/: catalog.rs  extension.rs  manager.rs  manifest.rs  mod.rs  publication.rs  tables.rs
src-tauri/src/userdata/: data.rs  mod.rs  tables.rs
src/components/: catalog.jsx  category.rs  mod.rs  publication.rs  summary.jsx  transitions.jsx
src/i18n/: index.js
src/i18n/locales/: en-us.js  index.js  pt-br.js
src/routes/: categoryView.jsx  chapterView.jsx  documentView.jsx  home.jsx  homeView.jsx  libraryView.jsx  pubRedirectView.jsx  publicationView.jsx  rootView.jsx  settingsView.jsx  summaryView.jsx
src/views/: home.rs  mod.rs  reader.rs
