[package]
name = "open-witness-library"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "open_witness_library_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Application Deps 
zip = "2.2.0"
rusqlite = { version = "0.32.1", features = [ "bundled", "chrono", "serde_json" ] }
chrono = "0.4.38"
typenum = "1.17.0"
sha2 = "0.10"
aes = "0.8.4"
cbc = "0.1.2"
hex = "0.4.3"
inflate = "0.4.5"
tempfile = "3"
url = "2.2.3"
fs_extra = "1.2.0"
log = "0.4"
colored = "2"
tauri-plugin-dialog = "2"
lru = "0.12"
tauri-plugin-log = { version = "2", features = ["colored"] }
tokio = "1.41.1"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
reqwest = {version = "0.12.9", features = ["stream"] }
futures-util = "0.3.31"
